# library_fast_api_example

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
hooks/: pre-commit
source/backend/: .env.test  entrypoint.sh  makemigration.sh  pyproject.toml
source/backend/app/: main.py
source/backend/app/api/: __init__.py  deps.py
source/backend/app/api/endpoints/: books.py  users.py
source/backend/app/controllers/: README
source/backend/app/controllers/basic_controllers/: book_copy_service.py  book_title_service.py  user_service.py
source/backend/app/controllers/composite_controllers/: book_composite_service.py
source/backend/app/core/: config.py
source/backend/app/db/: session.py
source/backend/app/managers/basic_managers/: book_copy_manager.py  book_title_manager.py  user_manager.py
source/backend/app/managers/composite_managers/: book_manager.py
source/backend/app/models/: __init__.py  base.py  book.py  book_copy.py  book_info.py  book_title.py  user.py
source/backend/app/repositories/: README  book_copy_repository.py  book_title_repository.py  user_repository.py
source/backend/app/schemas/: __init__.py  book.py  book_copy.py  book_info.py  book_title.py  user.py
source/backend/app/tests/integration/: conftest.py  test_books.py  test_users.py
source/backend/app/tests/unit/: conftest.py  test_book_copy_manager.py  test_book_copy_repository.py  test_book_manager.py  test_book_title_manager.py  test_book_title_repository.py  test_schemas.py  test_user_manager.py  test_user_repository.py
source/backend/app/utils/: db_utils.py  pg_errors.py  types.py
source/backend/migrations/: env.py
source/backend/migrations/versions/: 7beb197a2c8c_fix_error_with_no_datazone_aware_.py  818dc3949aac_init.py
